feat(torneos): implement knockout bracket generator algorithm with Byes support